[package]
name = "mystiko_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.19" }
prost = { version = "0.11.9" }
mystiko_core = { version = "0.1.0", path = "../mystiko_core" }
mystiko_config = { version = "0.1.0", path = "../mystiko_config", features = ["proto"] }
mystiko_database = { version = "0.1.0", path = "../mystiko_database" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-common-v1", "mystiko-core-document-v1", "mystiko-core-v1", "mystiko-config-api-v1"] }
mystiko_storage = { version = "0.1.0", path = "../mystiko_storage" }
mystiko_storage_sqlite = { version = "0.1.0", path = "../mystiko_storage_sqlite" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "sync"] }
typed-builder = { version = "0.14.0" }

[dev-dependencies]
mystiko_config = { version = "0.1.0", path = "../mystiko_config", features = ["proto", "fs"] }
serial_test = { version = "2.0.0" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.13.1" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = { version = "0.10.0" }