[package]
name = "mystiko_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.19" }
mystiko_config = { version = "0.1.0", path = "../mystiko_config", features = ["proto"] }
mystiko_core = { version = "0.1.0", path = "../mystiko_core" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-common-v1", "mystiko-core-document-v1", "mystiko-core-v1", "mystiko-api-config-v1", "mystiko-api-handler-v1", "mystiko-api-v1"] }
mystiko_relayer_client = { version = "0.1.0", path = "../mystiko_relayer_client", features = ["fs"] }
mystiko_static_cache = { version = "0.1.0", path = "../mystiko_static_cache", features = ["fs"] }
mystiko_storage = { version = "0.1.0", path = "../mystiko_storage" }
mystiko_storage_sqlite = { version = "0.1.0", path = "../mystiko_storage_sqlite" }
prost = { version = "0.11.9" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "sync"] }
typed-builder = { version = "0.14.0" }

[dev-dependencies]
async-trait = { version = "0.1.64" }
bip32 = { version = "0.5.0" }
ethers-core = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
mockall = { version = "0.11.4" }
mystiko_config = { version = "0.1.0", path = "../mystiko_config", features = ["proto", "fs"] }
mystiko_crypto = { git = "ssh://git@github.com/mystikonetwork/mystiko-protocol.git", rev = "72c319d", features = ["zkp"] }
mystiko_dataloader = { version = "0.1.0", path = "../mystiko_dataloader" }
mystiko_ethers = { version = "0.1.0", path = "../mystiko_ethers" }
mystiko_types = { version = "0.1.0", path = "../mystiko_types" }
mystiko_protocol = { git = "ssh://git@github.com/mystikonetwork/mystiko-protocol.git", rev = "72c319d" }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
rustc-hex = { version = "2.1.0" }
serial_test = { version = "2.0.0" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.13.1" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = { version = "0.10.0" }