[package]
edition = "2021"
name = "mystiko_node_rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
mystiko_types = { version = "0.1.0", path = "../mystiko_types" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
