[package]
name = "mystiko_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
lazy_static = { version = "1.4.0" }
num-bigint = { version = "0.4.3" }
num-traits = { version = "0.2.15" }
typed-builder = { version = "0.14.0" }
anyhow = { version = "1.0.69" }

# utils
serde_json = { version = "1.0", features = ["preserve_order"] }

# Error
thiserror = { version = "1.0.38" }

# Encodings
bs58 = { version = "0.4.0" }

# Encryption
babyjubjub-rs = { version = "0.0.10", features = ["default"] }
k256 = { version = "0.12.0" }

# mystiko
mystiko_crypto = { version = "0.1.0", path = "../mystiko_crypto" }

[dev-dependencies]
ethers-core  = { version = "2.0.0" }
ethers-signers   = { version = "2.0.0" }
mystiko_fs = { version = "0.1.0", path = "../mystiko_fs" }
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
babyjubjub-rs = { version = "0.0.10", features = ["aarch64"] }
