[package]
name = "mystiko_relayer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
fs = ["mystiko_relayer_config/fs"]

[dependencies]
anyhow = { version = "1.0" }
ethers-contract = { version = "2.0.3" }
ethers-core = { version = "2.0.3" }
futures = { version = "0.3.28" }
log = { version = "0.4.17" }
mystiko_ethers = { version = "0.1.0", path = "../mystiko_ethers" }
mystiko_relayer_abi = { version = "0.1.0", path = "../mystiko_relayer_abi" }
mystiko_relayer_config = { version = "0.1.0", path = "../mystiko_relayer_config" }
mystiko_relayer_types = { version = "0.1.0", path = "../mystiko_relayer_types" }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
mystiko_types = { version = "0.1.0", path = "../mystiko_types" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
rust_decimal = { version = "1.29.0" }
rustc-hex = { version = "2.1.0" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.27.0", features = ["sync"] }
typed-builder = { version = "0.15.2" }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
async-trait = { version = "0.1.64" }
env_logger = { version = "0.10.0" }
ethers = { version = "2.0.4" }
mockall = { version = "0.11.4" }
mockito = { version = "1.1.0" }
mystiko_abi = { version = "0.1.0", path = "../mystiko_abi" }
mystiko_relayer_client = { version = "*", path = ".", features = ["fs"] }
tokio = { version = "1.27.0", features = ["fs", "io-util", "io-std"] }
