[package]
name = "mystiko_relayer_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
validator = { version = "0.16.0", features = ["derive"] }
typed-builder = { version = "0.14.0" }
anyhow = { version = "1.0" }
tokio = { version = "1.26.0", features = ["full"] }
rust_decimal = { version = "1.29.0" }
