[package]
name = "mystiko_relayer_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false }
mystiko_abi = { version = "0.1.0", path = "../mystiko_abi" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-core-v1"] }
mystiko_types = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "2b27cc4" }
mystiko_validator = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "2b27cc4" }
num-bigint = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
typed-builder = { version = "0.15.2" }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt", "test-util"] }