[package]
name = "mystiko_screening_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = { version = "1.0.69" }
async-trait = { version = "0.1.64" }
derive_more = { version = "0.99.17" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
typed-builder = { version = "0.19.1" }
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features = false }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-screening-v1"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
mockito = { version = "1.1.0" }
