[package]
name = "mystiko_sequencer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
async-trait = { version = "0.1.64" }
ethers-core = { version = "2.0.4" }
mystiko_grpc = { version = "0.1.0", path = "../mystiko_grpc" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-sequencer-v1", "grpc-client"] }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
tonic = { version = "0.9.2", features = ["tls"] }
thiserror = { version = "1.0", default-features = false }
typed-builder = { version = "0.15.2" }
log = { version = "0.4.17" }


[dev-dependencies]
mockall = { version = "0.11.4" }
mystiko_sequencer_client = { version = "*", path = "."}
mystiko_grpc = { version = "0.1.0", path = "../mystiko_grpc", features = ["fs", "server"] }
tokio = { version = "1.27.0", features = ["macros", "rt", "test-util"] }
