[package]
name = "mystiko_server_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
ethers-core = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
ethers-signers = { version = "2.0.4"}
ethers-middleware = { version = "2.0.4" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.7.1" }
reqwest = { version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
thiserror = { version = "1.0", default-features = false }
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
typed-builder = { version = "0.14.0" }
generic-array = { version = "0.14.6" }
dotenv = { version = "0.15.0" }
tokio = { version = "1.26.0", features = ["time"] }

# mystiko
mystiko_fs = { version = "0.1.0", path = "../mystiko_fs" }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
rand = { version = "0.8.5" }
httptest= { version = "0.15.4" }