[package]
name = "mystiko_status_server"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.69" }
async-trait = { version = "0.1.64" }
http = { version = "0.2.9" }
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
log = { version = "0.4.17" }
mime = { version = "0.3.17" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.27.0", features = ["macros", "rt", "sync", "time"] }
typed-builder = { version = "0.15.2" }

[dev-dependencies]
env_logger = { version = "0.10.0" }
hyper = { version = "0.14.27", features = ["client"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
tokio = { version = "1.27.0", features = ["test-util"] }